api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.nodeport.port: "30000"
    kompose.service.type: NodePort
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.service.nodeport.port: "30000"
        kompose.service.type: NodePort
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/diyamonds-taass-default: "true"
        io.kompose.service: api-gateway
    spec:
      containers:
        - image: jerik99/diyamonds_taass-api-gateway
          name: api-gateway
          ports:
            - containerPort: 8083
          resources: {}
      restartPolicy: Always
status: {}
