dbpostgresql2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: dbpostgresql2
  name: dbpostgresql2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dbpostgresql2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/diyamonds-taass-default: "true"
        io.kompose.service: dbpostgresql2
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: postgres
            - name: restart
              value: unless-stopped
          image: postgres
          name: postgres-2
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data2
      restartPolicy: Always
      volumes:
        - name: db-data2
          persistentVolumeClaim:
            claimName: db-data2
status: {}
