eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.nodeport.port: "30001"
    kompose.service.type: NodePort
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.service.nodeport.port: "30001"
        kompose.service.type: NodePort
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/diyamonds-taass-default: "true"
        io.kompose.service: eureka-server
    spec:
      containers:
        - image: jerik99/diyamonds_taass-eureka-server
          name: eureka-server
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}
