rabbitmq3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq3
  name: rabbitmq3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq3
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/diyamonds-taass-default: "true"
        io.kompose.service: rabbitmq3
    spec:
      containers:
        - image: rabbitmq:3.8-management-alpine
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
status: {}
