ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.nodeport.port: "30002"
    kompose.service.type: NodePort
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.service.nodeport.port: "30002"
        kompose.service.type: NodePort
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/diyamonds-taass-default: "true"
        io.kompose.service: ui
    spec:
      containers:
        - image: tancredim/diyamonds_taass-ui
          name: diyamonds-frontend
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
