dbpostgresql2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: dbpostgresql2
  name: dbpostgresql2
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
  selector:
    io.kompose.service: dbpostgresql2
status:
  loadBalancer: {}
