eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.nodeport.port: "30001"
    kompose.service.type: NodePort
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  ports:
    - name: "8761"
      nodePort: 30001
      port: 8761
      targetPort: 8761
  selector:
    io.kompose.service: eureka-server
  type: NodePort
status:
  loadBalancer: {}
