ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.nodeport.port: "30002"
    kompose.service.type: NodePort
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - name: "4200"
      nodePort: 30002
      port: 4200
      targetPort: 80
  selector:
    io.kompose.service: ui
  type: NodePort
status:
  loadBalancer: {}
